[package]
name = "bit-mite"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4"
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["blocking"] } 
rand = "0.8" 
thiserror = "1.0"
byteorder = "1.5"
url = "2.5"
tokio = { version = "1", features = ["full"] }
bytes= "1"
sha1 = "0.10"
futures = "0.3"

